# cydia-substrate-rs

./: .gitignore  ADVANCED_FEATURES.md  COMPLETE_GUIDE.md  Cargo.toml  FINAL_SUMMARY.md  IMPLEMENTATION.md  LICENSE  README.md  build.rs
.cargo/: config.toml
examples/: advanced_hook.rs  and64_hook.rs  basic_hook.rs  disassembler.rs  game_hook.rs  game_hook_idiomatic.rs  inline_hook.rs  macro_hook.rs  memory_operations.rs
src/: advanced.rs  and64.rs  android.rs  debug.rs  disasm.rs  ffi.rs  hook.rs  image.rs  ios.rs  lib.rs  macros.rs  memory.rs  symbol.rs  tests.rs  utils.rs
src/arch/: arm.rs  mod.rs  x86.rs
